--- a/EventManagementSystem/Pages/Navbar.razor
+++ b/EventManagementSystem/Pages/Navbar.razor
@@ -13,7 +13,12 @@
                         <a class="nav-link" href="/register">Register</a>
                     </li>
                     <li class="nav-item">
+                        <Navbar />
                         <a class="nav-link" href="/">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <Navbar />
+                         <a href="/Invoice">Invoice</a>
                     </li>
                 </ul>
             </div>
