--- a/EventManagementSystem/Pages/Sidebar.razor
+++ b/EventManagementSystem/Pages/Sidebar.razor
@@ -4,7 +4,7 @@
     <div class="sidebar-header text-center py-3 border-bottom">
         <img src="images/logo.png" alt="Logo" class="img-fluid" style="height: 50px;" />
     </div>
-    <ul class="nav flex-column mt-3">
+    <ul class="nav flex-column mt-3 bg-dark">
         <li class="nav-item mt-2" >
             <NavLink class="nav-link d-flex align-items-center text-white py-3 px-3" href="/dashboard" Match="NavLinkMatch.All">
                 <i class="fas fa-tachometer-alt me-2"></i> Dashboard
@@ -23,6 +23,11 @@
         <li class="nav-item mt-2" >
             <NavLink class="nav-link d-flex align-items-center text-Dark py-3 px-3" href="/manage-users">
                 <i class="fas fa-users-cog me-2"></i> Manage Users
+            </NavLink>
+        </li>
+        <li class="nav-item mt-2">
+            <NavLink class="nav-link d-flex align-items-center text-Dark py-3 px-3" href="/Invoice">
+                <i class="fas fa-users-cog me-2"></i> Invoice
             </NavLink>
         </li>
     </ul>
